<resources>
    <string name="app_name">Bharat Plus</string>
    <string name="Sub_Message_Login">We will send you an One-Time-Password to the given number.</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="x">xxxxxxxxxx</string>
    <string name="resend"><u>Resend</u></string>
    <string name="message_placeholder">Message Placeholder Here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dummy_profession">Car Wash</string>
    <string name="dummy_date">19-10-23</string>
    <string name="dummy_location">Car Washing Job in gorakhpur</string>
    <string name="dummy_phone">+919876543210</string>
    <string name="dummy_rating">4.9</string>
    <string name="buy_now">Buy Now</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="post_jobs">Post Jobs</string>
    <string name="job_title">Job Title</string>
    <string name="job_description">Job Description</string>
    <string name="disclaimer">* When Posted, Your Number will be shared with other users</string>
    <string name="post">Post</string>
    <string name="icon_for_verification">Icon For Verification</string>
    <string name="india_country_code">+91</string>
    <string name="get_otp">Get OTP</string>
    <string name="settings">Settings</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="done">DONE</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp_sent_to">Please Enter the OTP sent to</string>
    <string name="resend_otp_in_60_secs">Resend OTP in 60 secs</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="find_jobs">Find Jobs</string>
    <string name="find_workers">Find Workers</string>
    <string name="update_location">Update Location</string>
    <string name="shop">Shop</string>
    <string name="professionals">Professionals</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="product_image">Product Image</string>
</resources>