<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/white"
    android:elevation="8dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/jobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/jobDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/jobTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="28-8-23"
        app:layout_constraintBottom_toBottomOf="@id/jobTitle"
        />

    <TextView
        android:id="@+id/jobDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_description"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/postedBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/jobTitle" />

    <TextView
        android:id="@+id/postedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/jobDesc"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>