<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="8.5"
        app:layout_constraintBottom_toTopOf="@id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24"
            android:tooltipText="Back"
            app:tint="@color/black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/svProfileInfo"
        app:layout_constraintTop_toBottomOf="@id/llHeader" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/svProfileInfo"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/ivProfileFrame"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/profile_default" />

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditProfilePicture"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_alignEnd="@id/ivProfileFrame"
            android:layout_alignBottom="@id/ivProfileFrame"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_edit_24"
            android:contentDescription="@string/update_profile_image" />

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfileFrame"
            android:layout_alignStart="@id/etName"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelName"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_white_edit_text"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:maxLength="255"
            android:maxLines="1"
            android:padding="10dp" />


        <TextView
            android:id="@+id/labelProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etName"
            android:layout_alignStart="@id/etProfession"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:text="@string/profession"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelProfession"
            android:layout_marginHorizontal="10dp"
            tools:text="Profession"
            android:enabled="false"
            android:allowClickWhenDisabled="true"
            android:background="@drawable/background_white_edit_text"
            android:padding="10dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/labelGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etProfession"
            android:layout_alignStart="@id/etGender"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:text="@string/gender"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelGender"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/background_white_edit_text"
            android:padding="10dp"
            android:textSize="18sp"
            android:enabled="false"
            android:allowClickWhenDisabled="true"
            tools:text="Gender"/>

        <TextView
            android:id="@+id/labelPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etGender"
            android:layout_alignStart="@id/etPhoneNumber"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:text="@string/phone_number"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelPhoneNumber"
            android:layout_marginHorizontal="10dp"
            android:allowClickWhenDisabled="true"
            android:background="@drawable/background_white_edit_text"
            android:enabled="false"
            tools:text="Phone Number"
            android:textSize="18sp"
            android:padding="10dp" />

    </RelativeLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/rounded_background_success"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:enabled="false"
        android:allowClickWhenDisabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>