<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".activities.CompleteProfileActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_your_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:background="@drawable/card_background"
        android:layout_margin="18dp"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/ivProfileFrame"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/profile_default" />
            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
            </FrameLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEditProfilePicture"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_alignEnd="@id/ivProfileFrame"
                android:layout_alignBottom="@id/ivProfileFrame"
                android:background="@color/yellow"
                android:src="@drawable/baseline_edit_24" />

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivProfileFrame"
                android:layout_alignStart="@id/etName"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelName"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_white_edit_text"
                android:hint="@string/name"
                android:maxLength="255"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:padding="10dp" />


            <TextView
                android:id="@+id/labelProfession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etName"
                android:layout_alignStart="@id/etProfession"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/profession"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/etProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelProfession"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/profession"
                android:inputType="textCapWords"
                />

            <TextView
                android:id="@+id/labelGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etProfession"
                android:layout_alignStart="@id/etGender"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/gender"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelGender"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/gender"
                android:inputType="textCapWords"
                />

            <TextView
                android:id="@+id/labelPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etGender"
                android:layout_alignStart="@id/etPhoneNumber"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/phone_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelPhoneNumber"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/background_white_edit_text"
                android:enabled="false"
                android:allowClickWhenDisabled="true"
                android:hint="@string/phone_number"
                android:inputType="phone|number"
                android:padding="10dp" />

        </RelativeLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/rounded_background_success"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:enabled="false"
        android:allowClickWhenDisabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollDetails" />
</androidx.constraintlayout.widget.ConstraintLayout>