<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_phone_number"
                android:textStyle="bold"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/llMain"
                android:textAlignment="center"
                android:padding="22dp"
                />
            <LinearLayout
                android:id="@+id/llMain"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvBharatPlus"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:maxHeight="220dp"
                    android:maxWidth="220dp"
                    android:id="@+id/ivMessage"
                    android:src="@drawable/mail_send"
                    android:layout_gravity="center"
                    android:contentDescription="Icon For Verification" />
                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/enter_your_phone_number"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="35dp"
                    android:gravity="center"
                    android:text="@string/Sub_Message_Login"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    />

                <LinearLayout
                    android:id="@+id/llMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="66dp"
                    android:layout_marginEnd="66dp"
                    android:padding="6dp"
                    android:background="@drawable/background_box">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="+91"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        />
                    <EditText
                        android:layout_marginStart="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="6"
                        android:background="@null"
                        android:id="@+id/etMobile"
                        android:hint="@string/x"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        />
                </LinearLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnGetOTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Get OTP"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:background="@drawable/round_btn"
                        />

                    <ProgressBar
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/pbLoading"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        />

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvBharatPlus"
                android:text="@string/app_name"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>